--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Khmer:wght@100..900&family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Noto+Sans+Khmer:wght@100..900&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Luckiest+Guy&family=Noto+Sans+Khmer:wght@100..900&family=Oswald:wght@200..700&display=swap');
 
 body {
     font-family: 'Oswald', 'Noto Sans Khmer', sans-serif;
@@ -12,6 +13,10 @@ body {
 
 .logo {
     font-family: 'Luckiest Guy', cursive;
+}
+
+.khmerFont {
+     font-family: "Oswald", sans-serif;
 }
 
 .no-scrollbar {
